--- a/pm_activity/src/main/AndroidManifest.xml
+++ b/pm_activity/src/main/AndroidManifest.xml
@@ -8,11 +8,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
+        <!--<activity-->
+        <!--    android:name=".IntentActivity"-->
+        <!--    android:exported="true" />-->
+        <!--<activity-->
+        <!--    android:name=".FinishActivity"-->
+        <!--    android:exported="true" />-->
         <activity
-            android:name=".FinishActivity"
-            android:exported="false" />
-        <activity
-            android:name=".StartActivity"
+            android:name=".IntentActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
