利用元数据传递配置信息

--- a/pm_activity/src/main/AndroidManifest.xml
+++ b/pm_activity/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data android:name="ww" android:value="是他" />
         </activity>
     </application>
 
