给应用页面注册快捷方式

--- a/pm_activity/src/main/AndroidManifest.xml
+++ b/pm_activity/src/main/AndroidManifest.xml
@@ -27,7 +27,13 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <meta-data android:name="ww" android:value="是他" />
+
+            <meta-data
+                android:name="ww"
+                android:value="是他" />
+            <meta-data
+                android:name="android.app.shortcuts"
+                android:resource="@xml/shortcuts" />
         </activity>
     </application>
 
