--- a/middle_control/src/main/AndroidManifest.xml
+++ b/middle_control/src/main/AndroidManifest.xml
@@ -8,8 +8,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
+        <!--<activity-->
+        <!--    android:name=".SwitchActivity"-->
+        <!--    android:exported="false" />-->
         <activity
-            android:name=".CheckBoxActivity"
+            android:name=".SwitchActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
