--- a/data_storage/src/main/AndroidManifest.xml
+++ b/data_storage/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".ShoppingCartActivity"
+            android:exported="false" />
+        <activity
             android:name=".GoodsShoppActivity"
             android:exported="true">
             <intent-filter>
