--- a/advanced_control/src/main/AndroidManifest.xml
+++ b/advanced_control/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication">
+        android:theme="@style/MyStyle">
         <activity
-            android:name=".PagerTabStripActivity"
+            android:name=".OpenPagerActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
