--- a/advanced_control/src/main/AndroidManifest.xml
+++ b/advanced_control/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/MyStyle">
         <activity
-            android:name=".OpenPagerActivity"
+            android:name=".FragmentStaticActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
