--- a/advanced_control/src/main/AndroidManifest.xml
+++ b/advanced_control/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -8,7 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/MyStyle">
         <activity
-            android:name=".OpenPageFragmentActivity"
+            android:name=".BillListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PocketBookActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
