--- a/boradcast/src/main/AndroidManifest.xml
+++ b/boradcast/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <!--允许震动-->
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- 允许震动 -->
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
@@ -10,20 +9,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication" >
-        <!--静态注册广播-->
+        android:theme="@style/Theme.MyApplication">
+        <!-- 静态注册广播 -->
         <receiver
             android:name=".receiver.StaticReceiver"
             android:enabled="true"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="staticBroadcast" />
             </intent-filter>
         </receiver>
 
         <activity
-            android:name=".StaticBroadcastActivity"
-            android:exported="true" >
+            android:name=".SystemMinuteActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
