广播接收者 receiver 里的 onReceive 方法中写一些回调函数传递想要的参数

--- a/boradcast/src/main/AndroidManifest.xml
+++ b/boradcast/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </receiver>
 
         <activity
-            android:name=".AlarmActivity"
+            android:name=".StandardActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
