--- a/boradcast/src/main/AndroidManifest.xml
+++ b/boradcast/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- 允许震动 -->
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="vip.dengwj">
+
+    <!-- 在接收广播的应用的AndroidManifest.xml中添加权限配置 -->
+    <uses-permission android:name="vip.dengwj.TEST" />
+
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
@@ -10,6 +14,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
+        <!--静态注册广播-->
+        <!--<receiver-->
+        <!--    android:name=".receiver.OtherAppReceiver"-->
+        <!--    android:enabled="true"-->
+        <!--    android:exported="true">-->
+        <!--    <intent-filter>-->
+        <!--        <action android:name="vip.dengwj.TEST" />-->
+        <!--    </intent-filter>-->
+        <!--</receiver>-->
+
         <!-- 静态注册广播 -->
         <receiver
             android:name=".receiver.StaticReceiver"
