--- a/custom_control/src/main/AndroidManifest.xml
+++ b/custom_control/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-            android:name=".SlideMenuActivity"
+            android:name=".WatchFaceActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
