--- a/advanced_control/build.gradle
+++ b/advanced_control/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation 'com.google.code.gson:gson:2.8.7'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
 }
