--- a/network/build.gradle
+++ b/network/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     androidTestImplementation libs.espresso.core
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    // 4.2.2
+    implementation("com.squareup.okhttp3:okhttp:4.12.0")
 }
