--- a/network/build.gradle
+++ b/network/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     // 4.2.2
     implementation("com.squareup.okhttp3:okhttp:4.12.0")
+    implementation 'com.squareup.retrofit2:retrofit:2.7.0'
 }
