--- a/service/src/main/AndroidManifest.xml
+++ b/service/src/main/AndroidManifest.xml
@@ -9,6 +9,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".BankBossActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BankWorkerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NormalUserActivity"
+            android:exported="false" />
+        <activity
             android:name=".BankActivity"
             android:exported="true">
             <intent-filter>
@@ -16,26 +25,25 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- 注册服务 -->
-        <!--<service android:name=".services.FirstService" />-->
-        <!--隐式意图绑定-->
+        </activity> <!-- 注册服务 -->
+        <!-- <service android:name=".services.FirstService" /> -->
+        <!-- 隐式意图绑定 -->
         <service
             android:name=".services.BankService"
             android:exported="true">
             <intent-filter>
                 <action android:name="vip.dengwj.ACTION_NORMAL_USER" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-
             <intent-filter>
                 <action android:name="vip.dengwj.ACTION_BANK_WORKER" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-
             <intent-filter>
                 <action android:name="vip.dengwj.ACTION_BANK_BOSS" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </service>
