混合开启服务方式

--- a/service/src/main/AndroidManifest.xml
+++ b/service/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name=".NormalUserActivity"
             android:exported="false" />
         <activity
-            android:name=".BankActivity"
+            android:name=".SecondActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,6 +47,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </service>
+
+        <service android:name=".services.SecondService" />
     </application>
 
 </manifest>
