逻辑层编写

--- a/service/src/main/AndroidManifest.xml
+++ b/service/src/main/AndroidManifest.xml
@@ -48,6 +48,8 @@
             </intent-filter>
         </service>
         <service android:name=".services.SecondService" />
+
+        <service android:name=".services.PlayerService" />
     </application>
 
 </manifest>
